# test-ai-app

./: .dockerignore  .env.example  .gitignore  .vela.yml  AGENTS.md  ARCHITECTURE.md  COMPLETE_SYSTEM_ARCHITECTURE.md  COMPLETION_CHECKLIST.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_REVIEW_SUMMARY.md  Dockerfile  Dockerfile.api.test  Dockerfile.client.test  ENV_FILES_SUMMARY.md  FILES_REFERENCE.md  FINAL_SUMMARY.txt  GAP2_IMPLEMENTATION_SUMMARY.md  GAP3_IMPLEMENTATION_SUMMARY.md  GAP4_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_IMPLEMENTATION_REVIEW.md  SETUP_AND_API_GUIDE.md  SPLIT_SUMMARY.md  START_HERE.md  TAP_DEPLOYMENT_GUIDE.md  TAP_ENV_CONFIGURATION.md  TESTING_GUIDE.md  conftest.py  docker-compose.test.yml  environment.md  insomnia-collection.json  pyproject.toml  renovate.json  tap-docker.sh  test_api_client_communication.py  test_integration.py
apps/plm-tcin-mapper/: .env.example  DEVELOPER_GUIDE.md  README.md  entrypoint.sh  pyproject.toml
apps/plm-tcin-mapper-api/: entrypoint.sh  pyproject.toml
apps/plm-tcin-mapper-api/plm-tcin-mapper-api/: Dockerfile  pyproject.toml
apps/plm-tcin-mapper-api/plm-tcin-mapper-api/plm_tcin_mapper_api/: dependencies.py  main.py
apps/plm-tcin-mapper-api/plm_tcin_mapper_api/: main.py
apps/plm-tcin-mapper-api/plm_tcin_mapper_api/cli/: batch_runner.py
apps/plm-tcin-mapper-api/plm_tcin_mapper_api/database/: models.py
apps/plm-tcin-mapper-api/plm_tcin_mapper_api/llm/: disambiguator.py
apps/plm-tcin-mapper-api/plm_tcin_mapper_api/matching/: deterministic.py  scorer.py  size_normalizer.py
apps/plm-tcin-mapper-api/plm_tcin_mapper_api/pipeline/: evaluator.py  impact_simulator.py  ingestion.py  orchestrator.py  shadow_comparator.py  threshold_tuner.py
apps/plm-tcin-mapper-api/plm_tcin_mapper_api/routes/: admin.py  alias_mining.py  batch.py  departments.py  eval.py  extended_eval.py  health.py  improvements.py  llm_quality.py  mappings.py  shadow_comparison.py  variations.py
apps/plm-tcin-mapper-api/plm_tcin_mapper_api/services/: alias_mining_service.py  ingest_service.py  mapping_service.py
apps/plm-tcin-mapper-client/plm-tcin-mapper-client/: Dockerfile  entrypoint.sh  pyproject.toml
apps/plm-tcin-mapper-client/plm-tcin-mapper-client/plm_tcin_mapper_client/: __init__.py  api_client.py  enums.py  streamlit_app.py  utils.py
apps/plm-tcin-mapper/data2/normalized/: manifest.json
apps/plm-tcin-mapper/docs/: ALIAS_MINING_GUIDE.md  ARCHITECTURE.md  DATA_FLOW_DESIGN.md  DOCUMENTATION_INDEX.md  EVALUATION_SYSTEM.md  EXTENDED_EVALUATION_GUIDE.md  FEEDBACK_LOOP_SYSTEM.md  IMPLEMENTATION_REVIEW.md  PROCESS_FEEDBACK_EVALUATION.md  PROCESS_INGESTION.md  PROCESS_MATCHING.md  SYSTEM_OVERVIEW.md
apps/plm-tcin-mapper/plm_tcin_mapper/: dependencies.py  main.py
apps/plm-tcin-mapper/plm_tcin_mapper/database/: models.py
apps/plm-tcin-mapper/plm_tcin_mapper/llm/: disambiguator.py
apps/plm-tcin-mapper/plm_tcin_mapper/matching/: color_keywords.py  deterministic.py  scorer.py  size_normalizer.py
apps/plm-tcin-mapper/plm_tcin_mapper/models/: schemas.py
apps/plm-tcin-mapper/plm_tcin_mapper/pipeline/: evaluator.py  extended_evaluator.py  impact_simulator.py  ingestion.py  orchestrator.py  shadow_comparator.py  threshold_tuner.py
apps/plm-tcin-mapper/plm_tcin_mapper/routes/: __init__.py  eval.py  extended_eval.py  feedback.py  health.py  ingest.py  mappings.py  shadow_comparison.py  threshold_tuning.py
apps/plm-tcin-mapper/plm_tcin_mapper/services/: alias_mining_service.py  eval_service.py  feedback_service.py  ingest_service.py  mapping_service.py
apps/plm-tcin-mapper/plm_tcin_mapper/ui/: db.py  streamlit_app.py  utils.py
apps/plm-tcin-mapper/tests/: conftest.py
apps/plm-tcin-mapper/tests/integration/: test_routes.py
apps/plm-tcin-mapper/tests/unit/: test_alias_mining.py  test_deterministic.py  test_extended_evaluator.py  test_scorer.py  test_size_normalizer.py
apps/plm-think-tank-ai/: .env.example  DEVELOPER_GUIDE.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
apps/plm-think-tank-ai/plm_think_tank_ai/: dependencies.py  main.py
apps/plm-think-tank-ai/plm_think_tank_ai/models/: schemas.py
apps/plm-think-tank-ai/plm_think_tank_ai/prompts/: prompt_consts.py
apps/plm-think-tank-ai/plm_think_tank_ai/routes/: __init__.py  health.py  prompts.py
apps/plm-think-tank-ai/plm_think_tank_ai/services/: prompt_service.py
apps/plm-think-tank-ai/tests/: conftest.py
apps/plm-think-tank-ai/tests/integration/: conftest.py  test_routes.py
apps/plm-think-tank-ai/tests/unit/: test_application.py
apps/spark-think-tank-ai/: README.md  entrypoint.sh  pyproject.toml
apps/spark-think-tank-ai/spark_think_tank_ai/: dependencies.py  main.py
apps/spark-think-tank-ai/spark_think_tank_ai/models/: schemas.py
apps/spark-think-tank-ai/spark_think_tank_ai/routes/: __init__.py  chat.py  health.py
apps/spark-think-tank-ai/spark_think_tank_ai/services/: chat_service.py
apps/spark-think-tank-ai/tests/integration/: test_spark_app_int.py
apps/spark-think-tank-ai/tests/unit/: test_chat_service.py  test_routes.py
apps/tcin-impression-mapping/: README.md  pyproject.toml
config/: base.yaml  (+1 more)
libs/ai-core/: DEVELOPER_GUIDE.md  README.md  pyproject.toml
libs/ai-core/ai_core/: __init__.py  config.py  exceptions.py  http.py  logging.py  token.py
libs/ai-core/tests/: conftest.py  test_config.py  test_exceptions.py  test_logging.py
libs/ai-elastic/: README.md  pyproject.toml
libs/ai-elastic/ai_elastic/: __init__.py  client.py
libs/ai-mongo/: README.md  pyproject.toml
libs/ai-mongo/ai_mongo/: __init__.py  client.py
libs/ai-openai/: README.md  pyproject.toml
libs/ai-openai/ai_openai/: __init__.py  client.py
libs/ai-thinktank/: DEVELOPER_GUIDE.md  README.md  pyproject.toml
libs/ai-thinktank/ai_thinktank/: __init__.py  client.py
libs/ai-thinktank/tests/: conftest.py
libs/ai-toss-utils/: DEVELOPER_GUIDE.md  README.md  pyproject.toml
libs/ai-toss-utils/ai_toss_utils/: __init__.py  http.py  token.py
libs/ai-toss-utils/tests/: conftest.py
(+182 files in other folders)
