[project]
name = "plm-tcin-mapper-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ai-core",
    "ai-mongo",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "gunicorn>=23.0.0,<24.0.0",
]

[project.scripts]
tcin-mapper-api-start = "plm_tcin_mapper_api.main:start"

[build-system]
requires = ["hatchling>=1.25.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plm_tcin_mapper_api"]
