[project]
name = "spark-think-tank-ai"
version = "0.1.0"
description = "FastAPI service — routes user queries to the configured LLM (ThinkTank or OpenAI)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ai-core",
    "ai-thinktank",
    "ai-toss-utils",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "gunicorn>=23.0.0,<24.0.0",
]

[project.scripts]
spark-start = "spark_think_tank_ai.main:start"

[build-system]
requires = ["hatchling>=1.25.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spark_think_tank_ai"]
