[project]
name = "tcin-impression-mapping"
version = "0.1.0"
description = "TCIN-to-impression mapping — deterministic fuzzy match with LLM fallback, Streamlit UI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ai-core",
    "ai-openai",
    "streamlit>=1.40.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "rapidfuzz>=3.9.0,<4.0.0",
    "tenacity>=8.2.0,<10.0.0",
]

[project.scripts]
tcin-ui = "tcin_impression_mapping.ui.app:launch"

[build-system]
requires = ["hatchling>=1.25.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tcin_impression_mapping"]
