[project]
name = "ai-core"
version = "0.1.0"
description = "Shared LLM interface, config, logging, and exceptions — no storage clients"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.11.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "loguru>=0.7.3,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_core"]
