[project]
name = "ai-elastic"
version = "0.1.0"
description = "Elasticsearch client for the AI monorepo — built on elasticsearch-py, configured via ai-core Settings"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ai-core",
    "elasticsearch>=8.0.0,<9.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_elastic"]
