[project]
name = "ai-mongo"
version = "0.1.0"
description = "MongoDB client for the AI monorepo — built on pymongo, configured via ai-core Settings"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ai-core",
    "pymongo>=4.7.0,<5.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_mongo"]
