[project]
name = "ai-openai"
version = "0.1.0"
description = "OpenAI chat completion client — implements ai-core LLMClient interface"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ai-core",
    "openai>=1.35.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
]

# truststore enables the system cert store (needed behind corporate SSL inspection).
[project.optional-dependencies]
truststore = ["truststore>=0.10.0"]

[build-system]
requires = ["hatchling>=1.25.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_openai"]
