[project]
name = "ai-thinktank"
version = "0.1.0"
description = "ThinkTank / Model Garden chat completion client — implements ai-core LLMClient interface"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ai-core",
    "ai-toss-utils",
]

[build-system]
requires = ["hatchling>=1.25.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_thinktank"]
