[project]
name = "ai-toss-utils"
version = "0.1.0"
description = "Target Object Storage (TOSS) utilities — reserved for future implementation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

# No dependencies yet — TOSS object storage client to be implemented.

[build-system]
requires = ["hatchling>=1.25.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_toss_utils"]
