[project]
name = "plm-tcin-mapper-client"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit>=1.40.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.scripts]
tcin-mapper-client-start = "plm_tcin_mapper_client.main:start"

[build-system]
requires = ["hatchling>=1.25.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plm_tcin_mapper_client"]
